experiments/microservices/teastore-services.yaml
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-db
  labels:
    app: teastore
    run: teastore-db
    release: "release-name"
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    run: teastore-db
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-registry
  labels:
    app: teastore
    run: teastore-registry
    release: "release-name"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-registry
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-persistence
  labels:
    app: teastore
    run: teastore-persistence
    release: "release-name"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-persistence
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-auth
  labels:
    app: teastore
    run: teastore-auth
    release: "release-name"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-auth
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-image
  labels:
    app: teastore
    run: teastore-image
    release: "release-name"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-image
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-recommender
  labels:
    app: teastore
    run: teastore-recommender
    release: "release-name"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: teastore-recommender
---
# Source: teastore/templates/teastore-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: teastore-webui
  labels:
    app: teastore
    run: teastore-webui
    release: "release-name"
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30080
    protocol: TCP
  selector:
    run: teastore-webui
